# moji_namer

./: .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
moji_namer/: moji_namer.py
