[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moji_namer"
version = "0.0.2"

description = "A small python utility to make ChatGPT API calls to rename picture files."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [
  { name = "Lucas Sinclair" },
  { name = "Paul Rougieux" }
]

urls = { Homepage = "https://github.com/xapple/moji_namer/" }

dependencies = [
  "openai>=1.50.0",
]
